Bug 392462 - Changes to colour palettes via the Text editor are only visible after re-opening the "Edit Text" dialog.
Summary: Changes to colour palettes via the Text editor are only visible after re-open...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: investigated, junior-jobs, triaged
Depends on:
Blocks:
 
Reported: 2018-03-28 18:08 UTC by kalia24
Modified: 2018-09-27 10:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kalia24 2018-03-28 18:08:23 UTC
Steps to reproduce:
1. Create text layer, in edition window -> colour menu choose "Add/Remove Color..." and add a colour; save the changes
2. The new colour is visible in the "Add/Remove" pop-up, but not in colour menu list (the one you choose colour for text fill from)
3. Close the text edition window and reopen it: new colour is available in the choose-from colour list

The same happens for deleting a colour from palette - it disappears from the choose-from list only after closing and reopening the text edit window.
Comment 1 Emmet O'Neill 2018-09-15 21:11:03 UTC
Confirmed on Linux using master branch. Adding or removing colors from the palette within the "Edit Text" dialog doesn't go into effect until the next time the editor is opened.
Comment 2 Dmitry Kazakov 2018-09-27 10:10:06 UTC
Git commit e64dc33b28cf718232a206e7ff3204da9bbeb554 by Dmitry Kazakov.
Committed on 27/09/2018 at 10:09.
Pushed by dkazakov into branch 'master'.

Fix update of the palette widget in the text editor

M  +8    -6    libs/widgets/KoColorSetWidget.cpp

https://commits.kde.org/krita/e64dc33b28cf718232a206e7ff3204da9bbeb554