Fix update of the palette widget in the text editor

BUG:392462